# dazbrel

./: .env.example  API_TOPOLOGY.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_SECURE.md  Dazno Umbrel Specs.md  Dockerfile  ICON.md  MARKETING_COPY.md  NEXT_STEPS.md  README.md  SECURITY.md  TESTING.md  UMBREL_APP_STORE_SUBMISSION.md  docker-compose.portainer.yml  docker-compose.secure.yml  docker-compose.yml  run_tests.sh  récup.md  security_tests.sh  setup-umbrel.sh  stack.env  umbrel-app.yml
gallery/: create-app-store-gallery.sh  create-placeholder-images.sh  create_gallery.sh  screenshot-templates.html
src/: lib.rs  main.rs
src/api/: lightning_client.rs  local_lightning_client.rs  mcp_client.rs  mod.rs  umbrel_integrations.rs
src/auth/: mod.rs  session.rs
src/handlers/: actions.rs  advanced_api.rs  dashboard.rs  mod.rs  websocket.rs
src/middleware/: auth.rs  mod.rs  rate_limiting.rs  validation.rs
src/models/: analytics.rs  automation.rs  metrics.rs  ml.rs  mod.rs  recommendation.rs
src/routes/: auth.rs
src/utils/: config.rs  ml_engine.rs  mod.rs
static/css/: dazno-superior-theme.css  dazno-theme.css
static/js/: dashboard.js  history.js  recommendations.js  settings.js  superior-dashboard.js
templates/: change-password.html  dashboard.hbs  history.hbs  login.html  recommendations.hbs  settings.hbs  superior_dashboard.hbs
tests/: integration_tests.rs  mock_api_server.rs  performance_tests.rs  test_config.rs
